# Friday

./: .gitattributes  .gitignore  build.gradle.kts  context.md  first.md  first_utf8.md  friday_helper.py  gradle.properties  log.md  logcat.md  optimization_plan.md  plan.md  prompt.md  tasks.meta.json
.github/workflows/: android-build.yml
app/: build.gradle.kts  debug.keystore
app/src/main/: AndroidManifest.xml
app/src/main/assets/: labels.txt  wakeword.onnx
app/src/main/assets/friday_onnx_models/: labels.txt
app/src/main/cpp/: CMakeLists.txt  friday_jni.cpp
app/src/main/java/com/friday/assistant/audio/: AudioCaptureManager.kt  SpeakerVerifier.kt  SpeechRecognizerManager.kt  SpeechToTextHelper.kt  VoicePipeline.kt  VoiceRecorder.kt  WakeWordDetector.kt
app/src/main/java/com/friday/assistant/automation/: AutomationBridge.kt  FridayAccessibilityService.kt  ScreenReader.kt  UIAutomator.kt
app/src/main/java/com/friday/assistant/classifier/: CommandClassifier.kt  LocalLlmRunner.kt
app/src/main/java/com/friday/assistant/core/: AccessibilityHelper.kt  BootReceiver.kt  Database.kt  FridayApplication.kt  FridayDeviceAdminReceiver.kt  FridayLogger.kt  ModelManager.kt
app/src/main/java/com/friday/assistant/core/db/: BriefEntities.kt  Dao.kt  Entities.kt  FridayDatabase.kt
app/src/main/java/com/friday/assistant/core/native/: LlamaEngine.kt  WhisperEngine.kt
app/src/main/java/com/friday/assistant/executor/: RoutineExecutor.kt  SystemExecutor.kt
app/src/main/java/com/friday/assistant/intelligence/: AgentCore.kt  DialogueStateTracker.kt  EntityExtractor.kt  InputPreprocessor.kt  MemoryManager.kt  PostClassificationValidator.kt  PreferenceExtractor.kt  PromptBuilder.kt  QueryResult.kt  ToolDispatcher.kt
app/src/main/java/com/friday/assistant/intelligence/brief/: BriefCrawler.kt  BriefScheduler.kt  BriefWorker.kt  DefaultInterests.kt
app/src/main/java/com/friday/assistant/intelligence/nlu/: NluIntentClassifier.kt  SemanticIntentRouter.kt  WordpieceTokenizer.kt
app/src/main/java/com/friday/assistant/tools/: Tool.kt  ToolRegistrar.kt
app/src/main/java/com/friday/assistant/tools/accessibility/: InteractionTools.kt  ScreenReaderTool.kt
app/src/main/java/com/friday/assistant/tools/apps/: AppLauncherTool.kt
app/src/main/java/com/friday/assistant/tools/calendar/: CalendarTool.kt
app/src/main/java/com/friday/assistant/tools/camera/: CameraTool.kt
app/src/main/java/com/friday/assistant/tools/clipboard/: ClipboardTool.kt
app/src/main/java/com/friday/assistant/tools/email/: EmailTool.kt
app/src/main/java/com/friday/assistant/tools/files/: FileManagerTool.kt
app/src/main/java/com/friday/assistant/tools/location/: LocationTool.kt
app/src/main/java/com/friday/assistant/tools/media/: MediaControlTool.kt
app/src/main/java/com/friday/assistant/tools/notes/: NotesTool.kt  PreferenceTools.kt
app/src/main/java/com/friday/assistant/tools/notifications/: NotificationTool.kt
app/src/main/java/com/friday/assistant/tools/phone/: PhoneTool.kt
app/src/main/java/com/friday/assistant/tools/search/: WebSearchTool.kt
app/src/main/java/com/friday/assistant/tools/system/: ScreenshotTool.kt  SystemControlsTool.kt
app/src/main/java/com/friday/assistant/tools/whatsapp/: WhatsAppTool.kt
app/src/main/java/com/friday/assistant/ui/: AudioVisualizerView.kt  FridayForegroundService.kt  FridayRecognitionService.kt  FridayService.kt  FridaySessionService.kt  MainActivity.kt  NotificationService.kt  OverlayService.kt
app/src/main/java/com/friday/assistant/ui/overlay/: AudioWaveformComposable.kt  FridayOverlayContent.kt  OverlayManager.kt
app/src/main/java/com/friday/assistant/ui/screens/: DailyBriefScreen.kt  MainActivity.kt  SetupWizard.kt
app/src/main/java/com/friday/assistant/ui/theme/: FridayTheme.kt
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: accessibility_service_config.xml  friday_accessibility_service.xml  interaction_service.xml  recognition_service.xml
gradle/: libs.versions.toml
scripts/: friday_training.ipynb  generate_dataset.ps1  realtime_wakeword_pc.py  test_wakeword_pc.py  train_nlu.py  train_wakeword.py
